# wabt-debugger-tui

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: add_1.wasm  add_1.wast  func_1.wasm  func_1.wast  loop_1.wasm  loop_1.wast  memory_1.wasm  memory_1.wast  memory_2.wasm  memory_2.wast  print_1.wasm  print_1.wast  print_2.wasm  print_2.wast
include/wdb_tui/: common.h  debug_display.h  display.h  home_display.h  host_functions.h  profiler_display.h  side_menu_display.h  wast_display.h
src/: main.cpp
src/display/: debug_display.cpp  display.cpp  home_display.cpp  profiler_display.cpp  side_menu_display.cpp  wast_display.cpp
src/stubs/: host_functions_stubs.cpp
